--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,9 @@
 {
   "short_name": "iSort",
   "name": "iSort",
+  "start_url": ".",
+  "display": "standalone",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +21,6 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#f9fbfa",
   "background_color": "#f4fef1"
 }
